--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".loginActivity">
 
-    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/drawer_layout_login"
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <android.support.v7.widget.Toolbar
+            <androidx.appcompat.widget.Toolbar
                 android:id="@+id/login_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
@@ -33,7 +33,7 @@
                     android:textSize="18dp"
                     android:textStyle="bold" />
 
-            </android.support.v7.widget.Toolbar>
+            </androidx.appcompat.widget.Toolbar>
 
 
             <!-- ALL THE LOGIN -->
@@ -65,7 +65,7 @@
                     android:inputType="textPassword" />
 
                 <!-- BUTTON FOR START THE LOGIN -->
-                <android.support.v7.widget.ButtonBarLayout
+                <androidx.appcompat.widget.ButtonBarLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="20dp">
@@ -77,10 +77,10 @@
                         android:text="@string/btLogIn"
                         android:theme="@style/AppTheme.Button2" />
 
-                </android.support.v7.widget.ButtonBarLayout>
+                </androidx.appcompat.widget.ButtonBarLayout>
 
                 <!-- BUTTON FOR CHANGE TO THE REGISTER LAYOUT -->
-                <android.support.v7.widget.ButtonBarLayout
+                <androidx.appcompat.widget.ButtonBarLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="25dp">
@@ -95,13 +95,13 @@
                         android:textColor="#3f51b5"
                         android:textSize="15dp" />
 
-                </android.support.v7.widget.ButtonBarLayout>
+                </androidx.appcompat.widget.ButtonBarLayout>
 
             </LinearLayout>
 
         </RelativeLayout>
 
-    </android.support.v4.widget.DrawerLayout>
+    </androidx.drawerlayout.widget.DrawerLayout>
 
 
 </RelativeLayout>
