--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".registerActivity">
 
-    <android.support.v4.widget.DrawerLayout
+    <androidx.drawerlayout.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/drawer_layout_register"
@@ -17,24 +17,24 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <android.support.v7.widget.Toolbar
+            <androidx.appcompat.widget.Toolbar
                 android:id="@+id/register_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
-                android:theme="@style/ThemeOverlay.AppCompat.Dark" >
+                android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
                 <TextView
+                    android:id="@+id/toolbar_title_register"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/registerToolbar"
                     android:layout_gravity="center"
-                    android:id="@+id/toolbar_title_register"
+                    android:text="@string/registerToolbar"
                     android:textColor="@color/white"
-                    android:textStyle="bold"
-                    android:textSize="18dp"/>
+                    android:textSize="18dp"
+                    android:textStyle="bold" />
 
-            </android.support.v7.widget.Toolbar>
+            </androidx.appcompat.widget.Toolbar>
 
             <!-- ALL THE REGISTER -->
             <LinearLayout
@@ -73,7 +73,7 @@
                         android:hint="@string/passWord"/>
 
                 <!-- BUTTON FOR START THE REGISTER -->
-                <android.support.v7.widget.ButtonBarLayout
+                <androidx.appcompat.widget.ButtonBarLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="20dp">
@@ -85,10 +85,10 @@
                         android:layout_height="wrap_content"
                         android:text="@string/btRegister"/>
 
-                </android.support.v7.widget.ButtonBarLayout>
+                </androidx.appcompat.widget.ButtonBarLayout>
 
                 <!-- BUTTON FOR CHANGE TO THE LOGIN LAYOUT -->
-                <android.support.v7.widget.ButtonBarLayout
+                <androidx.appcompat.widget.ButtonBarLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="25dp">
@@ -103,12 +103,12 @@
                         android:textSize="15dp"
                         android:textColor="#3f51b5"/>
 
-                </android.support.v7.widget.ButtonBarLayout>
+                </androidx.appcompat.widget.ButtonBarLayout>
 
             </LinearLayout>
 
         </RelativeLayout>
 
-    </android.support.v4.widget.DrawerLayout>
+    </androidx.drawerlayout.widget.DrawerLayout>
 
 </RelativeLayout>
