Login screens added

--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -101,7 +101,7 @@
                         android:text="@string/btn_link_to_login"
                         android:textAllCaps="false"
                         android:textSize="15dp"
-                        android:textColor="#3f51b5"/>
+                        android:textColor="#FFFFFF"/>
 
                 </androidx.appcompat.widget.ButtonBarLayout>
 
