--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -92,7 +92,7 @@
                         android:background="@null"
                         android:text="@string/btn_link_to_register"
                         android:textAllCaps="false"
-                        android:textColor="#3f51b5"
+                        android:textColor="#FFFFFF"
                         android:textSize="15dp" />
 
                 </androidx.appcompat.widget.ButtonBarLayout>
